--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ members = [
   "crates/astria-sequencer-validation",
   "crates/astria-storage",
   "crates/astria-telemetry",
+  "crates/astria-tower-trace",
   "crates/astria-test-utils",
 ]
 resolver = "2"
@@ -32,6 +33,7 @@ eyre = "0.6"
 figment = "0.10.8"
 futures = "0.3"
 hex = "0.4"
+http = "0.2.9"
 humantime = "2.1.0"
 hyper = "0.14"
 jsonrpsee = { version = "0.19" }
@@ -46,6 +48,7 @@ kube = { version = "0.82.2", default-features = false, features = [
 minijinja = "0.32.1"
 multiaddr = "0.17"
 once_cell = "1.17.1"
+pin-project = "1.0.12"
 sha2 = "0.10"
 serde = "1"
 serde_json = "1"
@@ -65,7 +68,10 @@ tendermint-config = "0.32"
 tendermint-proto = "0.32"
 tendermint-rpc = "0.32"
 tokio = "1.28"
+tokio-util = "0.7.8"
+tokio-stream = "0.1"
 tonic = "0.9"
+tower = "0.4"
 tracing = "0.1"
 tracing-subscriber = "0.3"
 uuid = "1.3.1"
