--- a/crates/astria-composer/Cargo.toml
+++ b/crates/astria-composer/Cargo.toml
@@ -36,7 +36,7 @@ tokio = { workspace = true, features = [
   "sync",
   "time",
 ] }
-tokio-util = { version = "0.7.8", features = ["rt"] }
+tokio-util = { workspace = true, features = ["rt"] }
 tracing = { workspace = true, features = ["attributes"] }
 
 [dependencies.sequencer-client]
