--- a/crates/astria-test-utils/Cargo.toml
+++ b/crates/astria-test-utils/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-k8s-openapi = { workspace = true }
-kube = { workspace = true, features = ["client", "runtime", "ws"] }
+k8s-openapi = { version = "0.20.0", features = ["v1_26"] }
+kube = { version = "0.86", default-features = false, features = ["client", "runtime", "ws", "rustls-tls"] }
+
 tokio = { workspace = true, features = ["io-util"] }
