proto: define sequencer v1alpha1
This patch extracts Rust types that are used in communication between
sequencer, sequencer-relayer, conductor, and celestia (as the
data availability layer). The resulting protobuf types are intended to
be the only way that services exchange data, making the current json-based
wire format obsolete.

The protobuf types defined in v1alpha1 of the sequencer API are deprecated
(and were also never used).

add a builder to astria-merkle for deserialization

rename chain_id -> rollup_id

remove roots, proofs from protos where appropriate

clean-up sequencer-types by removing unused bits

fix sequencer-relayer tests by constructing the correct action roots

--- a/crates/astria-celestia-client/Cargo.toml
+++ b/crates/astria-celestia-client/Cargo.toml
@@ -15,9 +15,10 @@ serde_json = { workspace = true }
 sha2 = { workspace = true }
 tendermint = { workspace = true }
 thiserror = { workspace = true }
+tracing={workspace = true}
 
 merkle = { package = "astria-merkle", path = "../astria-merkle" }
-sequencer-types = { package = "astria-sequencer-types", path = "../astria-sequencer-types" }
+proto = { package = "astria-proto", path = "../astria-proto" }
 
 ### Celestia specific imports
 #
@@ -26,6 +27,7 @@ sequencer-types = { package = "astria-sequencer-types", path = "../astria-sequen
 # As none of them are reexported it is important to keep these in sync
 # when updating.
 jsonrpsee = { version = "0.20", features = ["client-core", "macros"] }
+hex.workspace = true
 
 [dependencies.celestia-rpc]
 git = "https://github.com/eigerco/celestia-node-rs"
