--- a/crates/astria-conductor/local.env.example
+++ b/crates/astria-conductor/local.env.example
@@ -1,14 +1,20 @@
+# Log Level
+ASTRIA_CONDUCTOR_LOG="info"
+
 # Data Availability service url (Celestia node in this case)
-ASTRIA_CONDUCTOR_CELESTIA_NODE_URL = "http://localhost:26659"
+ASTRIA_CONDUCTOR_CELESTIA_NODE_URL="http://localhost:26659"
 
 # Tendermint URL
-ASTRIA_CONDUCTOR_TENDERMINT_URL = "http://localhost:1318"
+ASTRIA_CONDUCTOR_TENDERMINT_URL="http://localhost:26657"
 
 # Chain ID
-ASTRIA_CONDUCTOR_CHAIN_ID = "ethereum"
+ASTRIA_CONDUCTOR_CHAIN_ID="ethereum"
 
 # Execution RPC URL
-ASTRIA_CONDUCTOR_EXECUTION_RPC_URL = "http://localhost:50051"
+ASTRIA_CONDUCTOR_EXECUTION_RPC_URL="http://localhost:50051"
 
 # disable block finalization
 ASTRIA_CONDUCTOR_DISABLE_FINALIZATION=false
+
+# libp2p Port
+ASTRIA_CONDUCTOR_LIBP2P_PORT=2451
