--- a/crates/astria-proto/Cargo.toml
+++ b/crates/astria-proto/Cargo.toml
@@ -20,6 +20,7 @@ hex = { workspace = true, optional = true }
 prost = { workspace = true }
 prost-types = { workspace = true }
 sha2 = { workspace = true, optional = true }
+tendermint = { workspace = true }
 tendermint-proto = { workspace = true }
 tonic = { workspace = true, optional = true }
 tracing = { workspace = true, optional = true }
