conductor: replace gossipnet by cometbft stream of new blocks
This patch removes gossipnet from conductor, relying on the
new extension trait introduced in recent patches of sequencer-client.

--- a/crates/astria-conductor/local.env.example
+++ b/crates/astria-conductor/local.env.example
@@ -30,8 +30,4 @@ ASTRIA_CONDUCTOR_EXECUTION_RPC_URL="http://127.0.0.1:50051"
 # disable block finalization
 ASTRIA_CONDUCTOR_DISABLE_FINALIZATION=false
 
-# The path to the libp2p private key.
-ASTRIA_CONDUCTOR_LIBP2P_PRIVATE_KEY=/home/user/.gossipnet/libp2p.priv
-
-# libp2p Port
-ASTRIA_CONDUCTOR_LIBP2P_PORT=2451
+ASTRIA_CONDUCTOR_SEQUENCER_URL="ws://127.0.0.1:26657"
