sequencer-client: add extension trait to stream sequencer blocks from cometbft
This patch adds the `SequencerSubscriptionClientExt` extension trait
to subscribe to new `tx.event = "NewBlock"` events from CometBFT
and convert them to `SequencerBlockData` items.

This patch also:

- reexports all of tendermint-rpc under `crate::tendermint` so that
one need not import a matching tendermint-rpc crate.
- warns the user if neither the `websocket` nor `http` features
were acticated.
- reeorganized the crate to that appropriate items belong to either
the `http` or `websocket` feature are exported.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -62,6 +62,7 @@ tendermint = "0.32"
 tendermint-config = "0.32"
 tendermint-proto = "0.32"
 tendermint-rpc = "0.32"
+thiserror = "1"
 tokio = "1.28"
 tonic = "0.9"
 tracing = "0.1"
