fix: addressing comments

--- a/crates/astria-conductor/local.env.example
+++ b/crates/astria-conductor/local.env.example
@@ -1,17 +1,21 @@
 # Log Level
-ASTRIA_CONDUCTOR_LOG="info"
+ASTRIA_CONDUCTOR_LOG="astria_conductor=info"
 
 # Data Availability service url (Celestia node in this case)
-ASTRIA_CONDUCTOR_CELESTIA_NODE_URL="http://localhost:26659"
+# This url is used to read finalized astria blocks from the Data Availability layer
+ASTRIA_CONDUCTOR_CELESTIA_NODE_URL="http://127.0.0.1:26659"
 
 # Tendermint URL
-ASTRIA_CONDUCTOR_TENDERMINT_URL="http://localhost:26657"
+# This url is used to talk to the astria sequener to eagerly read blocks before
+# they are finalized and available from the data avaialability layer
+ASTRIA_CONDUCTOR_TENDERMINT_URL="http://127.0.0.1:26657"
 
-# Chain ID
+# The chain id of the chain that is being read from the astria-sequencer or the
+# Data Availability layer
 ASTRIA_CONDUCTOR_CHAIN_ID="ethereum"
 
 # Execution RPC URL
-ASTRIA_CONDUCTOR_EXECUTION_RPC_URL="http://localhost:50051"
+ASTRIA_CONDUCTOR_EXECUTION_RPC_URL="http://127.0.0.1:50051"
 
 # disable block finalization
 ASTRIA_CONDUCTOR_DISABLE_FINALIZATION=false
