--- a/crates/astria-conductor/Cargo.toml
+++ b/crates/astria-conductor/Cargo.toml
@@ -42,3 +42,4 @@ base64 = { workspace = true }
 once_cell = { workspace = true }
 astria-sequencer-validation = { path = "../astria-sequencer-validation" }
 figment = { features = ["test"] }
+regex = { workspace = true }
