execute empty blocks functionality added to executor, some tests updates

--- a/crates/astria-conductor/local.env.example
+++ b/crates/astria-conductor/local.env.example
@@ -22,3 +22,6 @@ ASTRIA_CONDUCTOR_DISABLE_FINALIZATION=false
 
 # libp2p Port
 ASTRIA_CONDUCTOR_LIBP2P_PORT=2451
+
+# choose whether or not to execute empty blocks
+ASTRIA_CONDUCTOR_EXECUTE_EMPTY_BLOCKS=true
