added execution commit level to local.env.example

--- a/crates/astria-conductor/local.env.example
+++ b/crates/astria-conductor/local.env.example
@@ -23,5 +23,12 @@ ASTRIA_CONDUCTOR_DISABLE_FINALIZATION=false
 # libp2p Port
 ASTRIA_CONDUCTOR_LIBP2P_PORT=2451
 
+# Set the origin where blocks are pulled from and sent to the execution layer
+# Setting options:
+# - "Soft" -> blocks are only pulled from the sequencer
+# - "Firm" -> blocks are only pulled from DA
+# - "SoftAndFirm" -> blocks are pulled from both the sequencer and DA
+ASTRIA_CONDUCTOR_EXECUTION_COMMIT_LEVEL="SoftAndFirm"
+
 # choose whether or not to execute empty blocks
 ASTRIA_CONDUCTOR_EXECUTE_EMPTY_BLOCKS=true
