--- a/crates/astria-conductor/local.env.example
+++ b/crates/astria-conductor/local.env.example
@@ -1,6 +1,11 @@
 # Log Level
 ASTRIA_CONDUCTOR_LOG="astria_conductor=info"
 
+# The bearer token to retrieve sequencer blocks as blobs from Celestia.
+# The token is obtained by running `celestia bridge auth <permissions>`
+# on the host running the celestia node.
+ASTRIA_CONDUCTOR_CELESTIA_BEARER_TOKEN="<JWT Bearer token>"
+
 # Data Availability service url (Celestia node in this case)
 # This url is used to read finalized astria blocks from the Data Availability layer
 ASTRIA_CONDUCTOR_CELESTIA_NODE_URL="http://127.0.0.1:26659"
@@ -14,11 +19,19 @@ ASTRIA_CONDUCTOR_TENDERMINT_URL="http://127.0.0.1:26657"
 # Data Availability layer
 ASTRIA_CONDUCTOR_CHAIN_ID="ethereum"
 
+# A list of bootnodes that conductor will use to join the gossipnet p2p network.
+# Optional: if left empty conductor will be a single node in the gossipnet,
+# waiting for peers to join it.
+ASTRIA_CONDUCTOR_BOOTNODES=
+
 # Execution RPC URL
 ASTRIA_CONDUCTOR_EXECUTION_RPC_URL="http://127.0.0.1:50051"
 
 # disable block finalization
 ASTRIA_CONDUCTOR_DISABLE_FINALIZATION=false
+
+# The path to the libp2p private key.
+ASTRIA_CONDUCTOR_LIBP2P_PRIVATE_KEY=/home/user/.gossipnet/libp2p.priv
 
 # libp2p Port
 ASTRIA_CONDUCTOR_LIBP2P_PORT=2451
