fix ci, add description for env config option

--- a/crates/astria-conductor/local.env.example
+++ b/crates/astria-conductor/local.env.example
@@ -19,15 +19,12 @@ ASTRIA_CONDUCTOR_TENDERMINT_URL="http://127.0.0.1:26657"
 # Data Availability layer
 ASTRIA_CONDUCTOR_CHAIN_ID="ethereum"
 
-# A list of bootnodes that conductor will use to join the gossipnet p2p network.
-# Optional: if left empty conductor will be a single node in the gossipnet,
-# waiting for peers to join it.
-ASTRIA_CONDUCTOR_BOOTNODES=
-
 # Execution RPC URL
 ASTRIA_CONDUCTOR_EXECUTION_RPC_URL="http://127.0.0.1:50051"
 
 # disable block finalization
 ASTRIA_CONDUCTOR_DISABLE_FINALIZATION=false
 
+# The URL at which CometBFT/Sequencer is serving its RPC.
+# Used for subscribing to new blocks.
 ASTRIA_CONDUCTOR_SEQUENCER_URL="ws://127.0.0.1:26657"
