--- a/crates/astria-conductor/local.env.example
+++ b/crates/astria-conductor/local.env.example
@@ -7,12 +7,11 @@ ASTRIA_CONDUCTOR_LOG="astria_conductor=info"
 ASTRIA_CONDUCTOR_CELESTIA_BEARER_TOKEN="<JWT Bearer token>"
 
 # Data Availability service url (Celestia node in this case)
-# This url is used to read finalized astria blocks from the Data Availability layer
+# This url is used to read astria blocks from the Data Availability layer
 ASTRIA_CONDUCTOR_CELESTIA_NODE_URL="http://127.0.0.1:26659"
 
 # Tendermint URL
-# This url is used to talk to the astria sequener to eagerly read blocks before
-# they are finalized and available from the data avaialability layer
+# This url is used to talk to the astria sequencer to get validator sets
 ASTRIA_CONDUCTOR_TENDERMINT_URL="http://127.0.0.1:26657"
 
 # The chain id of the chain that is being read from the astria-sequencer or the
