mention that cometbft/sequencer are fully trusted nodes

--- a/crates/astria-conductor/local.env.example
+++ b/crates/astria-conductor/local.env.example
@@ -25,6 +25,7 @@ ASTRIA_CONDUCTOR_EXECUTION_RPC_URL="http://127.0.0.1:50051"
 # disable block finalization
 ASTRIA_CONDUCTOR_DISABLE_FINALIZATION=false
 
-# The URL at which CometBFT/Sequencer is serving its RPC.
-# Used for subscribing to new blocks.
+# The URL to a fully trusted CometBFT/Sequencer to subscribe to new blocks
+# over websocket using cometbft's RPC.
+# 127.0.0.1:26657 is the default socket address in comebft's `rpc.laddr` setting.
 ASTRIA_CONDUCTOR_SEQUENCER_URL="ws://127.0.0.1:26657"
