conductor: replace gossipnet by a subscription to cometbft/sequencer (#383)
## Summary
This patch replaces gossipnet by a websocket stream of new blocks
directly from sequencer.

## Background

Adding a p2p layer adds a lot of complexity to astria services. With
this patch conductor reads new blocks directly off of
cometbft/sequencer, making it much simpler. For background reading, see
this issue: https://github.com/astriaorg/astria/issues/325

## Changes
- Replace gossipnet directly by a stream of new blocks using the
cometbft subscrition RPC.
- No other changes in regard to how blocks are further processed has
been made.

## Testing
We are relying on the rust tendermint-rpc crate functioning properly. As
a follow-up it makes sense to create blackbox tests for conductor, which
are currently absent.

## Breaking Changelist
- Reading over p2p is no longer supported. Deployments must be updated
and wired to read off of cometbft/sequenceer.

## Related Issues
Precursor PRs unblocking this work:
https://github.com/astriaorg/astria/pull/375
https://github.com/astriaorg/astria/pull/376
https://github.com/astriaorg/astria/pull/382

closes https://github.com/astriaorg/astria/issues/332

---------

Co-authored-by: Emilia Hane <emiliaha95@gmail.com>

--- a/crates/astria-conductor/local.env.example
+++ b/crates/astria-conductor/local.env.example
@@ -7,22 +7,16 @@ ASTRIA_CONDUCTOR_LOG="astria_conductor=info"
 ASTRIA_CONDUCTOR_CELESTIA_BEARER_TOKEN="<JWT Bearer token>"
 
 # Data Availability service url (Celestia node in this case)
-# This url is used to read finalized astria blocks from the Data Availability layer
+# This url is used to read astria blocks from the Data Availability layer
 ASTRIA_CONDUCTOR_CELESTIA_NODE_URL="http://127.0.0.1:26659"
 
 # Tendermint URL
-# This url is used to talk to the astria sequener to eagerly read blocks before
-# they are finalized and available from the data avaialability layer
+# This url is used to talk to the astria sequencer to get validator sets
 ASTRIA_CONDUCTOR_TENDERMINT_URL="http://127.0.0.1:26657"
 
 # The chain id of the chain that is being read from the astria-sequencer or the
 # Data Availability layer
 ASTRIA_CONDUCTOR_CHAIN_ID="ethereum"
-
-# A list of bootnodes that conductor will use to join the gossipnet p2p network.
-# Optional: if left empty conductor will be a single node in the gossipnet,
-# waiting for peers to join it.
-ASTRIA_CONDUCTOR_BOOTNODES=
 
 # Execution RPC URL
 ASTRIA_CONDUCTOR_EXECUTION_RPC_URL="http://127.0.0.1:50051"
@@ -30,8 +24,7 @@ ASTRIA_CONDUCTOR_EXECUTION_RPC_URL="http://127.0.0.1:50051"
 # disable block finalization
 ASTRIA_CONDUCTOR_DISABLE_FINALIZATION=false
 
-# The path to the libp2p private key.
-ASTRIA_CONDUCTOR_LIBP2P_PRIVATE_KEY=/home/user/.gossipnet/libp2p.priv
-
-# libp2p Port
-ASTRIA_CONDUCTOR_LIBP2P_PORT=2451
+# The URL to a fully trusted CometBFT/Sequencer to subscribe to new blocks
+# over websocket using cometbft's RPC.
+# 127.0.0.1:26657 is the default socket address in comebft's `rpc.laddr` setting.
+ASTRIA_CONDUCTOR_SEQUENCER_URL="ws://127.0.0.1:26657"
