--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -71,4 +71,5 @@ jobs:
 
   lint:
     needs: [proto, rust, toml, markdown]
+    if: ${{ always() && !cancelled() }}
     uses: ./.github/workflows/reusable-success.yml
