example env comment update, added error context

--- a/crates/astria-conductor/local.env.example
+++ b/crates/astria-conductor/local.env.example
@@ -29,5 +29,7 @@ ASTRIA_CONDUCTOR_DISABLE_FINALIZATION=false
 # 127.0.0.1:26657 is the default socket address in comebft's `rpc.laddr` setting.
 ASTRIA_CONDUCTOR_SEQUENCER_URL="ws://127.0.0.1:26657"
 
-# choose whether or not to execute empty blocks
+# decide to execute empty blocks
+# true: skips empty blocks
+# false: executes empty blocks
 ASTRIA_CONDUCTOR_DISABLE_EMPTY_BLOCK_EXECUTION=false
