fix(ci): conditional workflows fix, fix docker image loading (#397)
## Summary
Updates conditional workflows so they don't always run, and some docker
image loading issues

## Background
Some of our tests should only run conditionally, but were running
everytime. Additionally docker images pull was experiencing issues with
QEMU loading due to docker not being logged in yet.

## Changes
- updates conditionals to evaluate against strings, because outputs are
converted to strings
- updated the success jobs to always run unless cancelled
- moves docker login higher up for docker workflows.

## Testing
Many testing commits in this PR to evaluate what was going on and get
fixed. Will manually test again after merge.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     environment: BUF
     needs: run_checker
-    if: ${{ needs.run_checker.outputs.run_release_proto }} && github.repository_owner == 'astriaorg'
+    if: needs.run_checker.outputs.run_release_proto == 'true' && github.repository_owner == 'astriaorg'
     steps:
       - uses: actions/checkout@v3
       - uses: bufbuild/buf-setup-action@v1
@@ -28,4 +28,5 @@ jobs:
 
   release:
     needs: [proto]
+    if: ${{ always() && !cancelled() }}
     uses: ./.github/workflows/reusable-success.yml
