--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -22,7 +22,7 @@ jobs:
 
   composer:
     needs: run_checker
-    if: ${{ needs.run_checker.outputs.run_docker }}
+    if: needs.run_checker.outputs.run_docker == 'true'
     uses: './.github/workflows/reusable-docker-build.yml'
     with:
       package-name: composer
@@ -31,7 +31,7 @@ jobs:
 
   conductor:
     needs: run_checker
-    if: ${{ needs.run_checker.outputs.run_docker }}
+    if: needs.run_checker.outputs.run_docker == 'true'
     uses: './.github/workflows/reusable-docker-build.yml'
     with:
       package-name: conductor
@@ -40,7 +40,7 @@ jobs:
 
   sequencer:
     needs: run_checker
-    if: ${{ needs.run_checker.outputs.run_docker }}
+    if: needs.run_checker.outputs.run_docker == 'true'
     uses: './.github/workflows/reusable-docker-build.yml'
     with:
       package-name: sequencer
@@ -49,7 +49,7 @@ jobs:
 
   sequencer-relayer:
     needs: run_checker
-    if: ${{ needs.run_checker.outputs.run_docker }}
+    if: needs.run_checker.outputs.run_docker == 'true'
     uses: './.github/workflows/reusable-docker-build.yml'
     with:
       package-name: sequencer-relayer
@@ -57,5 +57,6 @@ jobs:
     secrets: inherit
 
   docker:
+    if: ${{ always() && !cancelled() }}
     needs: [composer, conductor, sequencer, sequencer-relayer]
     uses: ./.github/workflows/reusable-success.yml
