--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -12,7 +12,7 @@ jobs:
   proto:
     runs-on: ubuntu-latest
     needs: run_checker
-    if: ${{ needs.run_checker.outputs.run_lint_proto }}
+    if: needs.run_checker.outputs.run_lint_proto == 'true'
     steps:
       - uses: actions/checkout@v3
       - uses: bufbuild/buf-setup-action@v1
@@ -31,7 +31,7 @@ jobs:
   rust:
     runs-on: ubuntu-22.04
     needs: run_checker
-    if: ${{ needs.run_checker.outputs.run_lint_rust }}
+    if: needs.run_checker.outputs.run_lint_rust == 'true'
     steps:
       - uses: actions/checkout@v3
       - uses: dtolnay/rust-toolchain@master
@@ -46,7 +46,7 @@ jobs:
   toml:
     runs-on: ubuntu-22.04
     needs: run_checker
-    if: ${{ needs.run_checker.outputs.run_lint_toml }}
+    if: needs.run_checker.outputs.run_lint_toml == 'true'
     steps:
       - uses: actions/checkout@v3
       - name: download taplo
@@ -60,7 +60,7 @@ jobs:
   markdown:
     runs-on: ubuntu-22.04
     needs: run_checker
-    if: ${{ needs.run_checker.outputs.run_lint_markdown }}
+    if: needs.run_checker.outputs.run_lint_markdown == 'true'
     steps:
       - uses: actions/checkout@v3
       - uses: DavidAnson/markdownlint-cli2-action@v11
@@ -71,4 +71,5 @@ jobs:
 
   lint:
     needs: [proto, rust, toml, markdown]
+    if: ${{ always() && !cancelled() }}
     uses: ./.github/workflows/reusable-success.yml
