--- a/.github/workflows/reusable-run-checker.yml
+++ b/.github/workflows/reusable-run-checker.yml
@@ -46,9 +46,10 @@ jobs:
       - uses: dorny/paths-filter@v2
         id: filters
         with:
+          list-files: json
           filters: |
             release_workflow:
-              - '.github/workflows/proto.yml'
+              - '.github/workflows/release.yml'
             test_workflow:
               - '.github/workflows/test.yml'
             docker_workflow:
