conductor: add execute empty blocks setting (#373)
## Summary
Currently empty blocks are ignored in Conductor. As regular block times
are considered more ideal, a setting for users to either execute or
ignore empty blocks will be added.

## Changes
- [x] add `disable_empty_block_execution` setting to `Config`
- [x] add `DISABLE_EMPTY_BLOCK_EXECTION` env var to local.env.example
- [x] update Executor `execute_block()` to perform differently based on
the `disable_empty_block_execution` setting

## Testing
- [x] add test to see that changing the `disable_empty_block_execution`
setting alters execution

## Related Issues
this pr replaces #343 because #329 got merged and changed how
configuration works

closes #285

---------

Co-authored-by: noot <36753753+noot@users.noreply.github.com>

--- a/crates/astria-conductor/local.env.example
+++ b/crates/astria-conductor/local.env.example
@@ -28,3 +28,8 @@ ASTRIA_CONDUCTOR_DISABLE_FINALIZATION=false
 # over websocket using cometbft's RPC.
 # 127.0.0.1:26657 is the default socket address in comebft's `rpc.laddr` setting.
 ASTRIA_CONDUCTOR_SEQUENCER_URL="ws://127.0.0.1:26657"
+
+# decide to execute empty blocks
+# true: skips empty blocks
+# false: executes empty blocks
+ASTRIA_CONDUCTOR_DISABLE_EMPTY_BLOCK_EXECUTION=false
