--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ members = [
   "crates/astria-sequencer-validation",
   "crates/astria-telemetry",
   "crates/astria-test-utils",
+  "crates/astria-config",
 ]
 resolver = "2"
 
@@ -69,6 +70,9 @@ tracing-subscriber = "0.3"
 uuid = "1.3.1"
 which = "4.4.0"
 wiremock = "0.5"
+quote = "1.0.33"
+syn = { version = "2.0.37", features = ["extra-traits"] }
+
 
 [patch.crates-io]
 # fix for astria-sequencer-client 
