try stop matching markdown files in crates

--- a/.github/workflows/reusable-run-checker.yml
+++ b/.github/workflows/reusable-run-checker.yml
@@ -64,7 +64,7 @@ jobs:
             lint_workflow:
               - '.github/workflows/lint.yml'
             crates:
-              - 'crates/**'
+              - 'crates/**!(*.md)'
               - 'Cargo.toml'
               - 'Cargo.lock'
               - '.cargo/**'
