--- a/crates/astria-proto/Cargo.toml
+++ b/crates/astria-proto/Cargo.toml
@@ -15,8 +15,10 @@ keywords = ["astria", "grpc", "rpc", "blockchain", "execution", "protobuf"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+
 ed25519-consensus = { workspace = true, optional = true }
 hex = { workspace = true, optional = true }
+indexmap = { version = "2.0.1", optional = true }
 prost = { workspace = true }
 prost-types = { workspace = true }
 sha2 = { workspace = true, optional = true }
@@ -37,6 +39,7 @@ client = ["dep:tonic"]
 native = [
   "dep:ed25519-consensus",
   "dep:hex",
+  "dep:indexmap",
   "dep:sequencer-validation",
   "dep:sha2",
   "dep:tracing",
