--- a/crates/astria-conductor/local.env.example
+++ b/crates/astria-conductor/local.env.example
@@ -33,7 +33,7 @@ ASTRIA_CONDUCTOR_DISABLE_EMPTY_BLOCK_EXECUTION=false
 
 # Set the origin where blocks are pulled from and sent to the execution layer
 # Setting options:
-# - "Soft" -> blocks are only pulled from the sequencer
-# - "Firm" -> blocks are only pulled from DA
+# - "SoftOnly" -> blocks are only pulled from the sequencer
+# - "FirmOnly" -> blocks are only pulled from DA
 # - "SoftAndFirm" -> blocks are pulled from both the sequencer and DA
 ASTRIA_CONDUCTOR_EXECUTION_COMMIT_LEVEL="SoftAndFirm"
