--- a/crates/astria-conductor/local.env.example
+++ b/crates/astria-conductor/local.env.example
@@ -34,5 +34,5 @@ ASTRIA_CONDUCTOR_SEQUENCER_URL="ws://127.0.0.1:26657"
 # false: executes empty blocks
 ASTRIA_CONDUCTOR_DISABLE_EMPTY_BLOCK_EXECUTION=false
 
-# the sequencer block height that the rollup genesis block was in
+# the sequencer block height that the rollup's first block was in
 ASTRIA_CONDUCTOR_GENESIS_SEQUENCER_BLOCK_HEIGHT=0
