creating astria-utils crate and adding config features to it

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,8 @@ members = [
   "crates/astria-sequencer-validation",
   "crates/astria-telemetry",
   "crates/astria-test-utils",
-  "crates/astria-config",
+  "crates/astria-config-derive",
+  "crates/astria-utils",
 ]
 resolver = "2"
 
