--- a/crates/astria-conductor/Cargo.toml
+++ b/crates/astria-conductor/Cargo.toml
@@ -27,7 +27,11 @@ tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
 tonic = { workspace = true }
 tracing = { workspace = true }
 
-astria-config = { path = "../astria-config" }
+astria-utils = { path = "../astria-utils", features = [
+  "config",
+  "config-tests",
+] }
+astria-config-derive = { path = "../astria-config-derive" }
 astria-proto = { path = "../astria-proto", features = ["client"] }
 sequencer-client = { package = "astria-sequencer-client", path = "../astria-sequencer-client", features = [
   "http",
