--- a/crates/astria-conductor/Cargo.toml
+++ b/crates/astria-conductor/Cargo.toml
@@ -35,7 +35,9 @@ astria-sequencer-relayer = { path = "../astria-sequencer-relayer" }
 astria-sequencer-types = { path = "../astria-sequencer-types" }
 sequencer-validation = { package = "astria-sequencer-validation", path = "../astria-sequencer-validation" }
 telemetry = { package = "astria-telemetry", path = "../astria-telemetry" }
-deadpool = { version = "0.10.0", default-features = false, features = ["managed"] }
+deadpool = { version = "0.10.0", default-features = false, features = [
+  "managed",
+] }
 thiserror.workspace = true
 
 [dev-dependencies]
