--- a/crates/astria-cli/Cargo.toml
+++ b/crates/astria-cli/Cargo.toml
@@ -8,4 +8,4 @@ edition = "2021"
 [dependencies]
 camino = "1.1.6"
 clap = { workspace = true, features = ["derive"] }
-color-eyre.workspace = true
+color-eyre = { workspace = true }
