update SEQUENCER_URL example config to use /websocket

--- a/crates/astria-conductor/local.env.example
+++ b/crates/astria-conductor/local.env.example
@@ -24,7 +24,7 @@ ASTRIA_CONDUCTOR_DISABLE_FINALIZATION=false
 # RPCs are subscribing to new blocks, fetching blocks at a given level, or
 # retrieving validators.
 # 127.0.0.1:26657 is the default socket address in comebft's `rpc.laddr` setting.
-ASTRIA_CONDUCTOR_SEQUENCER_URL="ws://127.0.0.1:26657"
+ASTRIA_CONDUCTOR_SEQUENCER_URL="ws://127.0.0.1:26657/websocket"
 
 # decide to execute empty blocks
 # true: skips empty blocks
