--- a/crates/astria-composer/Cargo.toml
+++ b/crates/astria-composer/Cargo.toml
@@ -44,6 +44,10 @@ package = "astria-sequencer-client"
 path = "../astria-sequencer-client"
 features = ["http"]
 
+[dependencies.sequencer-types]
+package = "astria-sequencer-types"
+path = "../astria-sequencer-types"
+
 [dev-dependencies]
 proto = { package = "astria-proto", path = "../astria-proto" }
 
