--- a/crates/astria-conductor/Cargo.toml
+++ b/crates/astria-conductor/Cargo.toml
@@ -9,6 +9,9 @@ sync_wrapper = "0.1.2"
 async-trait = "0.1.73"
 base64 = { workspace = true }
 color-eyre = { workspace = true }
+deadpool = { version = "0.10.0", default-features = false, features = [
+  "managed",
+] }
 ed25519-consensus = { workspace = true }
 figment = { workspace = true, features = ["env"] }
 futures = { workspace = true }
@@ -22,26 +25,24 @@ serde_json = { workspace = true }
 sha2 = { workspace = true }
 tendermint = { workspace = true }
 tendermint-proto = { workspace = true }
+thiserror = { workspace = true }
 tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
 tokio-util = { workspace = true, features = ["rt"] }
 tonic = { workspace = true }
 tracing = { workspace = true }
 
-astria-proto = { path = "../astria-proto", features = ["client"] }
+astria-sequencer-relayer = { path = "../astria-sequencer-relayer" }
+astria-sequencer-types = { path = "../astria-sequencer-types" }
+proto = { package = "astria-proto", path = "../astria-proto", features = ["client"] }
 sequencer-client = { package = "astria-sequencer-client", path = "../astria-sequencer-client", features = [
   "websocket",
 ] }
-astria-sequencer-relayer = { path = "../astria-sequencer-relayer" }
-astria-sequencer-types = { path = "../astria-sequencer-types" }
 sequencer-validation = { package = "astria-sequencer-validation", path = "../astria-sequencer-validation" }
 telemetry = { package = "astria-telemetry", path = "../astria-telemetry" }
-deadpool = { version = "0.10.0", default-features = false, features = [
-  "managed",
-] }
-thiserror.workspace = true
 
 [dev-dependencies]
 once_cell = { workspace = true }
 figment = { workspace = true, features = ["test"] }
 regex = { workspace = true }
-astria-proto = { path = "../astria-proto", features = ["client", "server"] }
+
+proto = { package = "astria-proto", path = "../astria-proto", features = ["server"] }
