--- a/crates/astria-proto/Cargo.toml
+++ b/crates/astria-proto/Cargo.toml
@@ -30,6 +30,7 @@ default = ["native"]
 client = ["dep:tonic"]
 native = ["dep:ed25519-consensus", "dep:hex", "dep:sha2", "dep:tracing"]
 server = ["dep:tonic"]
+mint = []
 
 [dev-dependencies]
 tempfile = { workspace = true }
