--- a/crates/astria-conductor/local.env.example
+++ b/crates/astria-conductor/local.env.example
@@ -17,8 +17,12 @@ ASTRIA_CONDUCTOR_CHAIN_ID="ethereum"
 # Execution RPC URL
 ASTRIA_CONDUCTOR_EXECUTION_RPC_URL="http://127.0.0.1:50051"
 
-# disable block finalization
-ASTRIA_CONDUCTOR_DISABLE_FINALIZATION=false
+# Set the origin where blocks are pulled from and sent to the execution layer
+# Setting options:
+# - "SoftOnly" -> blocks are only pulled from the sequencer
+# - "FirmOnly" -> blocks are only pulled from DA
+# - "SoftAndFirm" -> blocks are pulled from both the sequencer and DA
+ASTRIA_CONDUCTOR_EXECUTION_COMMIT_LEVEL="SoftAndFirm"
 
 # The URL to a fully trusted CometBFT/Sequencer to issue cometbft RPCs. Example
 # RPCs are subscribing to new blocks, fetching blocks at a given level, or
