--- a/crates/astria-cli/Cargo.toml
+++ b/crates/astria-cli/Cargo.toml
@@ -14,3 +14,4 @@ rand = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 serde_yaml = "0.9.25"
 sha2 = { workspace = true }
+which = { workspace = true }
